--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,27 @@
-# Site settings
 title: Jennifer Berdahl
-email: jennifer.berdahl@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jberdahl
-github_username:  jekyll
+description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-# Build settings
-markdown: kramdown
+url: 
+baseurl: ""
+paginate_path: "blog/page:num/"
+permalink: blog/:title/
+
+markdown: redcarpet
+highlighter: pygments
+paginate: 5
+
+navigation:
+ - title: Home
+   url: /index.html
+ - title: About
+   url: /about
+ - title: Contact
+   url: /contact
+
+social:
+   github: jberdahl
+   twitter: jberdahl
+   facebook: 
+   email: jennifer.berdahl@gmail.com
+
+google_analytics: 
