--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jennifer Berdahl
+title: Jennifer L. Berdahl
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
 url: 
@@ -11,10 +11,18 @@ highlighter: pygments
 paginate: 5
 
 navigation:
- - title: Home
+ - title: What's New
    url: /index.html
- - title: About
-   url: /about
+ - title: Bio
+   url: /bio
+ - title: Research
+   url: /research
+ - title: Teaching
+   url: /teaching
+ - title: Outreach
+   url: /outreach
+ - title: Blog
+   url: /blog
  - title: Contact
    url: /contact
 
